- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.13.2
- 
    None
- 
        e47ed7b88223c42dd20ef86b829061fcc4f1fc30 (qt/qtmultimedia/5.14)
When switching the current media of the QMediaPlayer too fast, the player starts playing the track, while not reporting it. Trying to stop the playback also doesn't work. Most likely the internal playback state is not in sync with AVFoundation.
Attached an example to trigger the problem.
With 5.12 the following gets printed and playback is not started:
NEW STATUS QMediaPlayer::LoadingMedia
NEW STATUS QMediaPlayer::LoadedMedia
NEW STATUS QMediaPlayer::LoadingMedia
NEW STATUS QMediaPlayer::LoadedMedia
With 5.13 the playback gets started without reporting it:
NEW STATUS QMediaPlayer::LoadingMedia
NEW STATUS QMediaPlayer::LoadedMedia
NEW STATUS QMediaPlayer::LoadingMedia
NEW STATUS QMediaPlayer::StalledMedia
NEW STATUS QMediaPlayer::BufferedMedia
NEW STATUS QMediaPlayer::LoadedMedia
- is required for
- 
                    AUTOSUITE-1515 4 critical messages posted on start of Neptune. Music starts playing on its own -         
- Closed
 
-