AVF: Only resume playback after a stalled buffer if really needed

When AVFoundation reports that the media is now buffered, we only
should resume the playback if the QMediaPlayer is in the according
state.

Fixes: QTBUG-81912
Change-Id: Idba30ecf6c9c7b87a1c67896d89faa9a1bceae10
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>